--- a/public/birthday-invite.html
+++ b/public/birthday-invite.html
@@ -1,6 +1,6 @@
 <!-- This is one possible solution -->
 <h1>its my birthday</h1>
-<h2>on the 24th march</h2>
+<h2>on the 1st January</h2>
 <img src="https://raw.githubusercontent.com/appbrewery/webdev/main/birthday-cake3.4.jpeg" alt="image of a birthday cake"/>
 
 <h2>what to bring:</h2>
